# captval

./: CHANGELOG.md  Cargo.toml  PRLOG.md  README.md  release.toml
.circleci/: config.yml
.github/: FUNDING.yml
crates/captval/: Cargo.toml  LICENSE  README.md  first-release.toml  release.toml  sonar-project.properties
crates/captval/.vscodepqor/: settings.json
crates/captval/src/: captcha.rs  captval.rs  client.rs  error.rs  hcaptcha.rs  lib.rs  recaptcha.rs  request.rs  response.rs  secret.rs  sitekey.rs  token.rs
crates/captval/src/hcaptcha/: code.rs  token.rs
crates/captval/src/recaptcha/: secret.rs  sitekey.rs  token.rs
crates/captval/tests/: compiletest.rs
crates/captval/tests/ui/compilefail/: captcha_not_identified.rs  captcha_not_identified.stderr  not_a_struct.rs  not_a_struct.stderr
crates/captval/tests/ui/hcaptcha_pass/: test_complete_success_response.rs  test_hcaptcha_integration_publisher.rs  test_invalid_remoteip.rs  test_invalid_secret_v2.rs  test_invalid_sitekey.rs  test_invalid_token.rs  test_with_remoteip.rs  test_with_sitekey.rs
crates/captval/tests/ui/pass/: hcaptcha_integration.rs  helper.rs  test_blank_sitekey.rs  test_invalid_secret_v1.rs  test_simple.rs
crates/captval/tests/ui/recaptcha_pass/: recaptcha_integration.rs  test_complete_error_response.rs  test_recaptcha_integration_publisher.rs
crates/captval_derive/: Cargo.toml  release.toml  sonar-project.properties
crates/captval_derive/src/: lib.rs
crates/captval_derive/tests/compile_fail/: complete_enum.rs  complete_enum.stderr  no_field_enum.rs  no_field_enum.stderr  no_field_struct.rs  no_field_struct.stderr
crates/captval_derive/tests/expand/: complete_struct.expanded.rs  complete_struct.rs  test.output.expanded.rs
crates/test-wasm/: Cargo.toml
crates/test-wasm/src/: lib.rs
