[workspace]
resolver = "2"
members = ["crates/captval", "crates/captval_derive", "crates/test-wasm"]

[workspace.package]
rust-version = "1.82"
edition = "2021"
publish = false

[workspace.dependencies]
env_logger = "0.11.8"
hex = "0.4.3"
itertools = "0.14.0"
proc-macro2 = "1.0.95"
proc-macro-error2 = "2.0.1"
quote = "1.0.40"
reqwest = { version = "0.12.20", default-features = false, features = [
    "json",
    "http2",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
syn = "2.0.104"
thiserror = "2.0.12"
tracing = "0.1.41"
url = "2.5.4"
uuid = "1.17.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

chrono = "0.4.41"
claims = "0.8.0"
lambda_runtime = "0.14.2"
macrotest = "1.1.0"
mockd = { version = "0.4.50", features = ["internet", "unique", "words"] }
rand = "0.9.1"
serde_test = "1.0.177"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
tracing-test = "0.2.5"
trybuild = "1.0.105"
wiremock = "0.6.4"
wasm-bindgen-test = "0.3.50"

[profile.release]
opt-level = "s"
