[workspace]
resolver = "2"
members = ["crates/captval", "crates/captval_derive", "crates/test-wasm"]

[workspace.package]
rust-version = "1.88"
edition = "2021"
publish = false

[workspace.dependencies]
env_logger = "0.11.8"
hex = "0.4.3"
itertools = "0.14.0"
proc-macro2 = "1.0.103"
proc-macro-error2 = "2.0.1"
quote = "1.0.41"
reqwest = { version = "0.12.24", default-features = false, features = [
    "json",
    "http2",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"
syn = "2.0.108"
thiserror = "2.0.17"
tracing = "0.1.41"
url = "2.5.7"
uuid = "1.18.1"
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"

chrono = "0.4.42"
claims = "0.8.0"
lambda_runtime = "0.14.4"
macrotest = "1.2.0"
mockd = { version = "0.4.55", features = ["internet", "unique", "words"] }
rand = "0.9.2"
serde_test = "1.0.177"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.20"
tracing-test = "0.2.5"
trybuild = "1.0.112"
wiremock = "0.6.5"
wasm-bindgen-test = "0.3.53"

[profile.release]
opt-level = "s"
