[package]
name = "captval"
version = "0.1.0"
description = "Captcha validators"
license = "MIT"
documentation = "https://docs.rs/captval"
repository = "https://github.com/jerus-org/captval"
edition.workspace = true
rust-version.workspace = true
publish = true

[dependencies]
hex = { workspace = true, optional = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
url.workspace = true
uuid.workspace = true

[dev-dependencies]
chrono.workspace = true
claims.workspace = true
mockd = { workspace = true }
rand.workspace = true
serde_test.workspace = true
tokio.workspace = true
tracing-test.workspace = true
wiremock.workspace = true

[features]
default = ["hcaptcha"]
trace = ["dep:tracing"]
enterprise = []
ext = ["dep:hex"]
hcaptcha = []
