[package]
name = "captval_derive"
version = "0.1.0"
description = """
Derive macro for captval. Please use captval crate.
"""
authors = ["Jeremiah Russell <jrussell@jerus.ie>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jerus-org/captval"
readme = "README.md"
documentation = "https://docs.rs/captval_derive"
categories = ["web-programming"]
keywords = ["hcaptcha", "captcha", "security", "backend", "protection"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "CHANGES.md",
]
edition.workspace = true
rust-version.workspace = true
publish = true

[lib]
name = "captval_derive"
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
proc-macro-error2.workspace = true

[dev-dependencies]
captval = { path = "../captval" }
macrotest.workspace = true
trybuild.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
